--- a/bestbid/requirements.txt
+++ b/bestbid/requirements.txt
@@ -35,21 +35,19 @@ mccabe==0.6.1
 monotonic==1.5
 msgpack==0.6.2
 Pillow==7.0.0
-pip==20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
 pylint==2.3.1
 pylint-django==2.0.14
-pylint-plugin-==0.6
+pylint-plugin-utils==0.6
 pyOpenSSL==19.1.0
 pypiwin32==223
 python-decouple==3.3
 pytz==2019.3
 rabbitmq==0.2.0
 service-identity==18.1.0
-setuptools==44.0.0.post20200106
 six==1.12.0
 soupsieve==1.9.5
 sqlparse==0.3.0
@@ -57,7 +55,6 @@ Twisted==20.3.0
 txaio==20.4.1
 typed-ast==1.4.1
 vine==1.3.0
-wheel==0.33.6
 whitenoise==5.0.1
 wincertstore==0.2
 wrapt==1.11.1
